color contrast issues

--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -70,7 +70,7 @@ textarea {
 
 .help-text {
     font-size: 0.8rem;
-    color: var(--cooper);
+    color: black;
     margin-top: -0.5rem;
     margin-bottom: 1rem;
 }
